--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
@@ -23,12 +24,12 @@
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
-            <button type="button" data-theme="dark" class="theme-menu__button">
+            <button type="button" type="button" data-theme="dark" class="theme-menu__button">
               Темно
             </button>
           </li>
           <li class="theme-menu__item">
-            <button
+            <button type="button"
               type="button"
               data-theme="auto"
               disabled
@@ -38,7 +39,7 @@
             </button>
           </li>
           <li class="theme-menu__item">
-            <button type="button" data-theme="light" class="theme-menu__button">
+            <button type="button" type="button" data-theme="light" class="theme-menu__button">
               Светло
             </button>
           </li>
@@ -51,7 +52,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image" />
           <p class="card__label">&lt;/HTML&gt;</p>
         </div>
         <p class="card__text">
@@ -63,7 +64,7 @@
           Место для ваших воспоминаний о начале обучения.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -90,7 +91,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -98,7 +99,7 @@
       <article class="card">
         <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image saturate-dark" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image saturate-dark" />
           <p class="card__label">&lt;/HTML&gt;</p>
         </div>
         <p class="card__text">
@@ -112,7 +113,7 @@
           Место для ваших воспоминаний о начале первого спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -139,7 +140,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -147,7 +148,7 @@
       <article class="card">
         <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image saturate-light" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image saturate-light" />
           <p class="card__label">&lt;CSS&gt;</p>
         </div>
         <p class="card__text">
@@ -159,7 +160,7 @@
           Место для ваших воспоминаний об окончании первого спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -186,7 +187,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -194,7 +195,7 @@
       <article class="card">
         <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image hue-rotate" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image hue-rotate" />
           <p class="card__label">&lt;desigions&gt;</p>
         </div>
         <p class="card__text">
@@ -208,7 +209,7 @@
           Место для ваших воспоминаний о начале второго спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -235,7 +236,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -243,7 +244,7 @@
       <article class="card">
         <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image invert" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image invert" />
           <p class="card__label">care</p>
         </div>
         <p class="card__text">
@@ -257,7 +258,7 @@
           Место для ваших воспоминаний об окончании второго спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -284,7 +285,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -292,7 +293,7 @@
       <article class="card">
         <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image sepia" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image sepia" />
           <p class="card__label">&lt;supportgt</p>
         </div>
         <p class="card__text">
@@ -304,7 +305,7 @@
           Место для ваших воспоминаний о начале третьего спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -331,7 +332,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -339,7 +340,7 @@
       <article class="card">
         <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image blur" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image blur" />
           <p class="card__label">&lt;lifes-style: none;&gt;</p>
         </div>
         <p class="card__text">
@@ -352,7 +353,7 @@
           Место для ваших воспоминаний об окончании третьего спринта.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -379,7 +380,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -387,7 +388,7 @@
       <article class="card">
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="" class="card__image mix-filter" />
+          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image mix-filter" />
           <p class="card__label">&lt;experience&gt;</p>
         </div>
         <p class="card__text">
@@ -403,7 +404,7 @@
           этой точке пути.
         </p>
         <div class="card__like-wrapper">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -430,43 +431,41 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
-    </main>
-    <footer class="footer">
-      <button
-        class="footer__button button"
-        type="button"
-        onclick="window['dialog'].showModal()"
-        aria-controls="dialog"
+      <button type="button"
+      class="save__button button"
+      type="button"
+      onclick="window['dialog'].showModal()"
+      aria-controls="dialog"
+    >
+      <svg class="save__floppy">
+        <use href="svg/floppy.svg#floppy"></use>
+      </svg>
+      <span class="save__button-text button__text"
+        >Сохранить на память</span
       >
-        <svg class="footer__floppy">
+    </button>
+    <dialog id="dialog" class="popup">
+      <div class="popup__wrapper">
+        <svg class="popup__floppy">
           <use href="svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="footer__button-text button__text"
-          >Сохранить на память</span
-        >
+        <span class="popup__text">Вставьте дискету, чтобы продолжить</span>
+      </div>
+      <button type="button"
+        class="popup__button button"
+        type="button"
+        onclick="window['dialog'].close()"
+        aria-controls="dialog"
+      >
+        <span class="popup__button-text button__text">ок</span>
       </button>
-      <dialog id="dialog" class="popup">
-        <div class="popup__wrapper">
-          <svg class="popup__floppy">
-            <use href="svg/floppy.svg#floppy"></use>
-          </svg>
-          <span class="popup__text">Вставьте дискету, чтобы продолжить</span>
-        </div>
-        <button
-          class="popup__button button"
-          type="button"
-          onclick="window['dialog'].close()"
-          aria-controls="dialog"
-        >
-          <span class="popup__button-text button__text">ок</span>
-        </button>
-      </dialog>
-    </footer>
+    </dialog>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
