--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
-            <button type="button" type="button" data-theme="dark" class="theme-menu__button">
+            <button
+              type="button"
+              type="button"
+              data-theme="dark"
+              class="theme-menu__button"
+            >
               Темно
             </button>
           </li>
           <li class="theme-menu__item">
-            <button type="button"
+            <button
+              type="button"
               type="button"
               data-theme="auto"
               disabled
@@ -39,7 +45,12 @@
             </button>
           </li>
           <li class="theme-menu__item">
-            <button type="button" type="button" data-theme="light" class="theme-menu__button">
+            <button
+              type="button"
+              type="button"
+              data-theme="light"
+              class="theme-menu__button"
+            >
               Светло
             </button>
           </li>
@@ -52,7 +63,11 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image"
+          />
           <p class="card__label">&lt;/HTML&gt;</p>
         </div>
         <p class="card__text">
@@ -99,7 +114,11 @@
       <article class="card">
         <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image saturate-dark" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image saturate-dark"
+          />
           <p class="card__label">&lt;/HTML&gt;</p>
         </div>
         <p class="card__text">
@@ -148,7 +167,11 @@
       <article class="card">
         <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image saturate-light" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image saturate-light"
+          />
           <p class="card__label">&lt;CSS&gt;</p>
         </div>
         <p class="card__text">
@@ -195,7 +218,11 @@
       <article class="card">
         <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image hue-rotate" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image hue-rotate"
+          />
           <p class="card__label">&lt;desigions&gt;</p>
         </div>
         <p class="card__text">
@@ -244,7 +271,11 @@
       <article class="card">
         <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image invert" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image invert"
+          />
           <p class="card__label">care</p>
         </div>
         <p class="card__text">
@@ -293,7 +324,11 @@
       <article class="card">
         <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image sepia" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image sepia"
+          />
           <p class="card__label">&lt;supportgt</p>
         </div>
         <p class="card__text">
@@ -340,7 +375,11 @@
       <article class="card">
         <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image blur" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image blur"
+          />
           <p class="card__label">&lt;lifes-style: none;&gt;</p>
         </div>
         <p class="card__text">
@@ -388,7 +427,11 @@
       <article class="card">
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__image-wrapper">
-          <img src="images/bus.png" alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками." class="card__image mix-filter" />
+          <img
+            src="images/bus.png"
+            alt="Нарисован минивэн, который стоит посреди леса ночью на фоне облачного неба. Картина выполнена яркими красками."
+            class="card__image mix-filter"
+          />
           <p class="card__label">&lt;experience&gt;</p>
         </div>
         <p class="card__text">
@@ -436,35 +479,35 @@
           </button>
         </div>
       </article>
-      <button type="button"
-      class="save__button button"
-      type="button"
-      onclick="window['dialog'].showModal()"
-      aria-controls="dialog"
-    >
-      <svg class="save__floppy">
-        <use href="svg/floppy.svg#floppy"></use>
-      </svg>
-      <span class="save__button-text button__text"
-        >Сохранить на память</span
-      >
-    </button>
-    <dialog id="dialog" class="popup">
-      <div class="popup__wrapper">
-        <svg class="popup__floppy">
-          <use href="svg/floppy.svg#floppy"></use>
-        </svg>
-        <span class="popup__text">Вставьте дискету, чтобы продолжить</span>
-      </div>
-      <button type="button"
-        class="popup__button button"
+      <button
         type="button"
-        onclick="window['dialog'].close()"
+        class="save__button button"
+        type="button"
+        onclick="window['dialog'].showModal()"
         aria-controls="dialog"
       >
-        <span class="popup__button-text button__text">ок</span>
+        <svg class="save__floppy">
+          <use href="svg/floppy.svg#floppy"></use>
+        </svg>
+        <span class="save__button-text button__text">Сохранить на память</span>
       </button>
-    </dialog>
+      <dialog id="dialog" class="popup">
+        <div class="popup__wrapper">
+          <svg class="popup__floppy">
+            <use href="svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="popup__text">Вставьте дискету, чтобы продолжить</span>
+        </div>
+        <button
+          type="button"
+          class="popup__button button"
+          type="button"
+          onclick="window['dialog'].close()"
+          aria-controls="dialog"
+        >
+          <span class="popup__button-text button__text">ок</span>
+        </button>
+      </dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
